--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -31,8 +31,15 @@ body {
   background-color: #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h5, h6 {
   color: #2c3e50;
+}
+
+h4{
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #2c3e50;
+  font-weight: 700;
 }
 
 svg-icon {
@@ -108,6 +115,10 @@ ul {
   }
 }
 
+ul{
+  list-style-type: none;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -128,7 +139,7 @@ h3 {
   font-size: 16px;
 }
 
-h4, h2 span.small {
+h2 span.small {
   font-size: 0.875rem;
 }
 
@@ -2276,7 +2287,7 @@ a.a_none {
 }
 
 #qr-scanner {
-  position: fixed;
+  position: absolute;
   right: 0;
   top: 0;
   height: 50px;
@@ -2452,6 +2463,7 @@ canvas {
 
       .price_digits_wrapper {
         position: relative;
+        text-shadow: 2px 2px 2px darken($main_color, 10);
       }
     }
 
@@ -2537,6 +2549,7 @@ canvas {
 }
 
 .p-wallet__price-block {
+  @include gradientBackground($main_color, darken($main_color, 10), top, bottom);
   position: relative;
   right: 0;
   left: 0;
@@ -2544,41 +2557,57 @@ canvas {
   z-index: 2;
   text-align: center;
   color: #fff;
-  padding: 30px 0;
-  margin: 30px 0;
+  padding: 50px 0;
+  overflow: hidden;
+
+  &:after {
+    opacity: 1;
+    content: "";
+    height: 1px;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    box-shadow: 0 -2px 4px 5px rgba(50, 50, 50, 0.1);
+    background: rgba(255, 255, 255, 0.3);
+  }
 
   .price-wrapper {
-    color: #d52026;
+    color: #fff;
     font-weight: 900;
     height: 90px;
     position: relative;
     display: inline-block;
   }
-}
 
-.p-wallet__price-block .price .price-icon {
-  font-size: 30px;
-  position: absolute;
-  top: 50%;
-  margin-top: -15px;
-  color: #ccc;
-  left: -30px;
-}
+  .ballance {
+    font-family: "Montserrat", sans-serif;
+    font-size: 10px;
+    display: block;
+    color: #fff;
+    opacity: 0.6;
+  }
 
-.p-wallet__price-block .price .price-sup {
-  font-style: italic;
-  font-weight: 700;
-  position: absolute;
-  left: 100%;
-  font-size: 40px;
-  top: 5%;
-}
+  .price {
+    .price-sup {
+      font-style: italic;
+      font-weight: 700;
+      position: absolute;
+      left: 100%;
+      font-size: 40px;
+      top: 5%;
+    }
 
-.p-wallet__price-block .ballance {
-  font-family: "Montserrat", sans-serif;
-  font-size: 10px;
-  display: block;
-  color: #aaa;
+    .price-icon {
+      font-size: 30px;
+      position: absolute;
+      top: 50%;
+      margin-top: -15px;
+      color: #fff;
+      left: -30px;
+      opacity: 0.4;
+    }
+  }
 }
 
 .transactions {
@@ -2668,11 +2697,6 @@ canvas {
   color: #48be18;
 }
 
-.p-share {
-  width: 100%;
-  padding-top: 35px;
-}
-
 .p-wrap {
   position: relative;
   z-index: 2;
@@ -2685,8 +2709,7 @@ canvas {
   transform: translate3d(-100%, 0, 0);
   width: 100%;
   position: absolute;
-  padding-top: 45px;
-  top: 0;
+  top: 70px;
   bottom: 50px;
   overflow: auto;
 
@@ -2983,6 +3006,132 @@ p.color_red {
   padding: 3px 0;
 }
 
+.avatar {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 5px;
+  vertical-align: middle;
+  background: center center no-repeat;
+  background-size: cover;
+  text-align: center;
+  line-height: 40px;
+}
+
 .mCSB_inside > .mCSB_container {
   margin-right: 0;
 }
+
+#mCSB_1_scrollbar_vertical {
+  z-index: 12;
+}
+
+@-webkit-keyframes slideOutDown {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
+@keyframes slideOutDown {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes slideInUp {
+  0% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideInUp {
+  0% {
+    -webkit-transform: translateY(100%);
+    transform: translateY(100%);
+    visibility: visible;
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+.ngdialog{
+  .ngdialog-content {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    -webkit-animation: slideInUp 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slideInUp 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    box-shadow: 0 0 10px 5px rgba(50,50,50,.1);
+
+    >ul{
+      padding: 15px;
+
+      >li{
+        @extend .transition;
+        padding: 10px;
+        border-bottom: 1px solid #fbfbfb;
+        border-top: 1px solid #f1f1f1;
+        color: #333;
+        cursor: pointer;
+        font-size: 14px;
+
+        >svg-icon{
+          color: #888;
+          top: -2px;
+          margin-right: 10px;
+
+          >svg{
+            width: 18px;
+            height: 18px;
+          }
+        }
+
+        &:first-child{
+          border-top: none;
+        }
+
+        &:last-child{
+          border-bottom: none;
+        }
+
+        &:hover{
+          background: #f9f8f8;
+        }
+      }
+    }
+  }
+
+  &.ngdialog-closing{
+    .ngdialog-content{
+      -webkit-animation: slideOutDown 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+      animation: slideOutDown 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    }
+  }
+}
+
+
