--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,10 +1,11 @@
 $main_color: #d51f26;
 //$main_color: #3296dc;
 
-$red: #e51e25;
+$red: #d51f26;
 $green: #48be18;
 
 $warning: #ffa500;
+$gold: #ffc153;
 
 $nav_bar_height: 50px;
 
