--- a/src/js/controllers/contacts/contact/new_contact/new_contact.scss
+++ b/src/js/controllers/contacts/contact/new_contact/new_contact.scss
@@ -1,3 +1,12 @@
-.transactions{
-  color: inherit;
+.contact_form{
+  padding: 0 20px 40px 20px;
+
+  input{
+    max-width: 100%;
+    width: 100%;
+  }
+
+  label{
+    margin-top: 15px;
+  }
 }
