--- a/src/js/controllers/contacts/contacts.scss
+++ b/src/js/controllers/contacts/contacts.scss
@@ -1,6 +1,49 @@
 @import "../../../css/variables";
 
 .contacts {
+  &.no_contacts {
+    background: #f1f1f1;
+  }
+
+  .no_contacts_message {
+    @extend .slideInDown;
+    margin: 30px;
+    text-align: center;
+    padding: 30px;
+    background: #fff;
+    border-radius: 10px;
+
+    &.ng-leave {
+      display: none;
+    }
+
+    svg {
+      width: 100px;
+      height: 100px;
+    }
+
+    p {
+      color: #777;
+      font-size: 14px;
+      line-height: 18px;
+      margin: 20px 0;
+
+      svg {
+        width: 18px;
+        height: 18px;
+      }
+
+      svg-icon.svg-icon-star_border {
+        color: $gold;
+
+        svg {
+          position: relative;
+          top: -1px;
+          margin: 0 5px;
+        }
+      }
+    }
+  }
 
   .dag_tabs .dag_tabs_list > ul {
     @include gradientBackground($main_color, darken($main_color, 5), top, bottom);
@@ -25,20 +68,34 @@
 
     svg-icon {
       color: #b3bbc4;
+      position: absolute;
+      left: 0;
+      top: 0;
+      cursor: pointer;
+      height: 100%;
+      width: 40px;
+      display: block;
+      z-index: 1;
 
       svg {
         position: absolute;
-        left: 10px;
         top: 50%;
         margin-top: -8px;
+        left: 50%;
+        margin-left: -8px;
         width: 16px;
         height: 16px;
+      }
+
+      &.clear_icon {
+        left: auto;
+        right: 0;
       }
     }
 
     .contacts_search_bar_input {
       border: none;
-      padding: 10px 10px 10px 30px;
+      padding: 10px 40px;
       width: 100%;
       background: #f1f1f1;
       max-width: 100%;
@@ -50,6 +107,12 @@
 
   .contacts_list {
     padding: 0 10px;
+
+    .contacts_list_letter {
+      color: #a1a7af;
+      margin: 10px 0;
+    }
+
     table {
       margin: 0;
       width: 100%;
@@ -60,12 +123,11 @@
         text-align: left;
         line-height: inherit;
         padding: 15px 20px;
+        vertical-align: middle;
 
         &.contacts_list_contact_favorite {
-          vertical-align: middle;
           text-align: center;
           width: 60px;
-          border-right: 1px solid #eee;
           padding: 0;
 
           .contacts_list_contact_favorite_trigger {
@@ -112,8 +174,26 @@
         }
 
         &.contacts_list_contact_info {
+          position: relative;
+          padding-left: 60px;
+
+          .avatar {
+            margin-right: 20px;
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            margin-top: -20px;
+          }
+
           .contacts_list_contact_info_full_name {
             font-weight: 700;
+            height: 20px;
+          }
+
+          .contacts_list_contact_info_email {
+            font-size: 12px;
+            color: #888;
+            height: 16px;
           }
         }
       }
