--- a/src/js/controllers/contacts/contact/contact.scss
+++ b/src/js/controllers/contacts/contact/contact.scss
@@ -21,7 +21,7 @@
       .contact_meta_full_name {
         font-size: 16px;
         color: #333;
-        font-weight: bold;
+        font-weight: 700;
       }
 
       .contact_meta_triggers {
