--- a/src/js/directives/dagSideMenu/dagSideMenu.scss
+++ b/src/js/directives/dagSideMenu/dagSideMenu.scss
@@ -1,6 +1,10 @@
 @import "../../../css/variables";
 
 .dag_side_menu {
+  h3{
+    padding: 15px;
+  }
+
   header{
     background: #fbfbfb;
     border-bottom: 1px solid #eee;
