--- a/src/js/directives/dagSideBar/dagSideBar.scss
+++ b/src/js/directives/dagSideBar/dagSideBar.scss
@@ -1,4 +1,3 @@
-/*
 .sidebar{
   position: fixed;
   left: 0;
@@ -17,7 +16,7 @@
     height: 100%;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.5);
     transform: translateX(-103%);
-    display: flex;
+    display: block;
     flex-direction: column;
     will-change: transform;
     z-index: 160;
@@ -33,7 +32,7 @@
 
     &.sidebar--animatable{
       .sidebar_content {
-        transition: all 330ms ease-out;
+        transition: all 330ms cubic-bezier(0.19, 1, 0.22, 1);
       }
     }
 
@@ -45,7 +44,7 @@
 
   &.sidebar--animatable{
     .sidebar_content {
-      transition: all 130ms ease-in;
+      transition: all 130ms cubic-bezier(0.19, 1, 0.22, 1);
     }
   }
 
@@ -63,4 +62,4 @@
     pointer-events: none;
     transition: opacity 0.3s cubic-bezier(0,0,0.3,1);
   }
-}*/
+}
