Refactor content display to avoid unnecessary use of fixed and absolute positions.

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -37,7 +37,7 @@
 
     -->
 
-    <div id="walletHome" class="walletHome tab-view tab-in" ng-class="{'not_backed_up' : index.needsBackup}">
+    <div id="walletHome" class="walletHome tab-view tab-in">
       <div class="introduction-svg" ng-include="'views/includes/background.html'"></div>
       <div class="p-wallet js-introduction">
         <div class="p-wallet__price-block">
