Device service, Wallets service, side menu

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,6 +5,7 @@
 /* Components */
 @import "components/buttons";
 @import "components/inputs";
+@import "components/animations";
 
 html {
   height: 100%;
