--- a/src/js/controllers/contacts/contacts.scss
+++ b/src/js/controllers/contacts/contacts.scss
@@ -119,7 +119,7 @@
       font-size: 12px;
 
       &:after{
-        content: '';
+        content: "";
         width: 100%;
         position: absolute;
         left: 15px;
