moved control upper for decimal part

--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -19,6 +19,11 @@
       <div translate>Security</div>
       <div class="description" translate>Backup your wallets and configure restrictions.</div>
     </li>
+
+    <li ui-sref="notifications" dag-left-icon="notifications" dag-right-icon="chevron-thin-right">
+      <div translate>Notifications</div>
+      <div class="description" translate>Enable/Disable notifications</div>
+    </li>
   </ul>
 
 
