--- a/public/views/preferencesNotifications.html
+++ b/public/views/preferencesNotifications.html
@@ -1,13 +1,14 @@
 <dag-nav-bar title="{{ 'Notifications' | translate}}" go-back="preferencesGlobal" invert></dag-nav-bar>
 
-<div class="content preferences" ng-controller="preferencesNotificationsController as prefGlobal" ng-init="prefGlobal.init()">
+<div class="content preferences" ng-controller="preferencesNotificationsController as prefPushNotifications"
+     ng-init="prefPushNotifications.init()">
   <ul>
     <li class="cursor-default">
       <div translate>Enable push notifications</div>
       <switch id="push-notifications" name="pushNotifications" ng-model="pushNotifications" class="green right"
-          ng-mousedown="switchPush()"
-        ></switch>
-    </li>
+          ng-mousedown="switchPush()">
+      </switch>
+    </li>o
   </ul>
 
 </div>
