added test for incoming_transactions hun msg

--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -25,8 +25,14 @@
       <div translate>Notifications</div>
       <div class="description" translate>Enable/Disable notifications</div>
     </li>
-  </ul>
 
+    <li ng-click="test()" dag-left-icon="notifications" dag-right-icon="chevron-thin-right">
+      <div translate>Test</div>
+      <div class="description" translate>Test</div>
+    </li>
+
+
+  </ul>
 
   <h4 translate>Other</h4>
   <ul>
