--- a/public/views/preferencesNotifications.html
+++ b/public/views/preferencesNotifications.html
@@ -5,10 +5,8 @@
   <ul>
     <li class="cursor-default">
       <div translate>Enable push notifications</div>
-      <switch id="push-notifications" name="pushNotifications" ng-model="pushNotifications" class="green right"
-          ng-mousedown="switchPush()">
-      </switch>
-    </li>o
+      <switch id="push-notifications" name="pushNotifications" ng-model="pushNotifications" class="green right"></switch>
+    </li>
   </ul>
 
 </div>
