added localizations and some null check controls

--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -23,14 +23,8 @@
     <li ui-sref="notifications" dag-left-icon="notifications" dag-right-icon="chevron-thin-right"
         ng-if="pushIsAvailableOnSystem">
       <div translate>Notifications</div>
-      <div class="description" translate>Enable/Disable notifications</div>
+      <div class="description" translate>Configure notifications</div>
     </li>
-
-    <li ng-click="test()" dag-left-icon="notifications" dag-right-icon="chevron-thin-right">
-      <div translate>Test</div>
-      <div class="description" translate>Test</div>
-    </li>
-
 
   </ul>
 
