--- a/public/views/preferencesNotifications.html
+++ b/public/views/preferencesNotifications.html
@@ -2,7 +2,7 @@
 
 <div class="content preferences" ng-controller="preferencesNotificationsController as prefPushNotifications"
      ng-init="prefPushNotifications.init()">
-  <ul>
+  <ul class="preferences_links">
     <li class="cursor-default">
       <div translate>Enable push notifications</div>
       <switch id="push-notifications" name="pushNotifications" ng-model="pushNotifications" class="green right"></switch>
