--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -308,7 +308,7 @@
                   ng-minlength="1" ng-maxlength="16" ng-model="_amount"
                   ng-required="!home.bSendAll"
                   autocomplete="off" ng-focus="home.formFocus('amount')"
-                  ng-blur="home.formFocus(false)"
+                  ng-blur="home.formFocus(false)" validate-amount-characters
                   normalize-amount>
 
                 <svg class="icon icon-d">
