--- a/src/js/controllers/contacts/contact/contact.scss
+++ b/src/js/controllers/contacts/contact/contact.scss
@@ -1,7 +1,6 @@
 @import "../../../../css/variables";
 
 .contact.contact {
-  background: #f1f1f1;
   padding: 15px;
 
   .contact_card {
@@ -76,6 +75,10 @@
           border-top: 1px solid #eee;
           padding: 10px 0;
           margin: 0 10px;
+
+          &.contact_action {
+            padding-top: 25px;
+          }
         }
       }
     }
