renamed id same as name

--- a/public/views/preferencesNotifications.html
+++ b/public/views/preferencesNotifications.html
@@ -5,7 +5,7 @@
   <ul class="preferences_links">
     <li class="cursor-default">
       <div translate>Enable push notifications</div>
-      <switch id="push-notifications" name="pushNotifications" ng-model="pushNotifications" class="green right"></switch>
+      <switch id="pushNotifications" name="pushNotifications" ng-model="pushNotifications" class="green right"></switch>
     </li>
   </ul>
 
