--- a/public/views/splash.html
+++ b/public/views/splash.html
@@ -54,7 +54,7 @@
             </p>
           </div>
 
-          <div class="m20t">
+          <div class="m20t" ng-if="!splash.isFat32">
             <label class="text-gray size-14" style="vertical-align: middle" for="custom_type">
               <div class="input-wrap-radio">
                 <input type="radio" name="registration_type" value="custom" ng-model="splash.registration_type"
